--- a/exercises/06_02_exset_01.tex
+++ b/exercises/06_02_exset_01.tex
@@ -23,6 +23,7 @@
 \exinput{exercises/06_02_ex_24}
 \exinput{exercises/06_02_ex_25}
 \exinput{exercises/06_02_ex_26}
+\exinput{exercises/06_02_ex_60}
 \exinput{exercises/06_02_ex_27}
 \exinput{exercises/06_02_ex_28}
 \exinput{exercises/06_02_ex_29}
