--- a/text/title_page.tex
+++ b/text/title_page.tex
@@ -49,13 +49,11 @@ Jennifer Bowen, Ph.D.
 \parbox{200pt}{\textit{Dalton State Contributors}}\hskip 2cm \phantom{.}
 %\textit{Editor}\hskip 7cm\phantom{.}
 
-\normalsize
+\large\vskip 4pt
 
-Mike Hilgemann \vskip 5pt
+Mike Hilgemann, Ph.D.\qquad Jason Schmurr, Ph.D.\vskip 4 pt
 
-Jason Schmurr \vskip 5pt
-
-Tom Gonzalez}
+Tom Gonzalez, Ph.D.\phantom{D.}\qquad Mike Joseph, Ph.D.}
 \normalsize
 \end{flushright}
 \end{minipage}
