--- a/exercises/06_02_exercises.tex
+++ b/exercises/06_02_exercises.tex
@@ -4,6 +4,7 @@
 \exinput{exercises/06_02_ex_03}
 \printproblems
 \exsetinput{exercises/06_02_exset_01}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/06_02_exset_02}
 \exsetinput{exercises/06_02_exset_03}
 \exsetinput{exercises/06_02_exset_04}
