--- a/text/14_Surface_Integrals.tex
+++ b/text/14_Surface_Integrals.tex
@@ -37,15 +37,15 @@ Now we find $dS$ for a surface $T$ given parametrically by equations
 $$x = x(u,v), \: y = y(u,v), \: z = z(u,v)$$
 for $(u,v)$ in a region $R$, following the same idea as before.  Small increments $du$ and $dv$ in the parameters will result in small parallelogram pieces of the surface of area $dS$.  One side of the parallelogram comes from $du$ while the other comes from $dv$.  The two sides are given by vectors $\vec a \: du$ and $\vec b \: dv$ where
 $$\vec a = \dfrac{\partial x}{\partial u} \vec i + \dfrac{\partial y}{\partial u} \vec j + \dfrac{\partial z}{\partial u} \vec k \: \text{ and } \: \vec a = \dfrac{\partial x}{\partial v} \vec i + \dfrac{\partial y}{\partial v} \vec j + \dfrac{\partial z}{\partial v} \vec k.$$
-To find the area of the parallelogram piece, we take the norm of the cross product, so
-$$dS = \left| \vec a \times \vec b \right| \: du \: dv,$$
+To find the area of the parallelogram piece, we take the norm (magnitude) of the cross product, so
+$$dS = \left|\left| \vec a \times \vec b \right|\right| \: du \: dv,$$
 and we integrate this over $R$ to get the total surface area. To clarify the notation, let us write
 $$\vec r(u,v) = x(u,v) \vec i + y(u,v) \vec j + z(u,v) \vec k ,$$
 a vector function describing the surface. Then 
 $$\vec a = \vec r_u(u,v) \: \text{ and } \: \vec b = \vec r_v(u,v)$$
 as above.  So $dS$ can now be written as
-$$dS = \left| \vec r_u \times \vec r_v \right| \: du \: dv$$ and the total surface area is
-$$S = \iint_R \left| \vec r_u \times \vec r_v \right| \: du \: dv.$$\\
+$$dS = \left|\left| \vec r_u \times \vec r_v \right|\right| \: du \: dv$$ and the total surface area is
+$$S = \iint_R \left|\left| \vec r_u \times \vec r_v \right|\right| \: du \: dv.$$\\
 
 \example{ex_surface_int04}{}{Use the above method to compute the surface area of the cone $z = \sqrt{x^2 + y^2}$ up to a height of $4$.}{Using $R$ for the circular region below the cone, the standard parametrization is
 $$x = u, \: y = v, \: z = \sqrt{u^2 + v^2}$$
@@ -58,18 +58,20 @@ The norm $\left| \vec r_u \times \vec r_v \right|$ becomes
 $$\left| \vec r_u \times \vec r_v \right| = \sqrt{1 + \dfrac{u^2}{u^2 + v^2} + \dfrac{v^2}{u^2 + v^2}} = \sqrt{2}.$$
 Therefore the surface area is 
 $$S = \iint_R \sqrt{2} \: du \: dv = 16\sqrt{2} \pi$$
-square units, since the region $R$ is a circle of radius 4. Notice that $\left| \vec r_u \times \vec r_v \right|$ is the same as $\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}$ using $x$ and $y$ instead of $u$ and $v$, as we would have obtained using the method from Section \ref{sec:surface_area}.
+square units, since the region $R$ is a circle of radius 4. Notice that $\left|\left| \vec r_u \times \vec r_v \right|\right|$ is the same as $\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}$ using $x$ and $y$ instead of $u$ and $v$, as we would have obtained using the method from Section \ref{sec:surface_area}.
 }\\
 
-\example{ex_surface_int05}{}{Determine the surface area of the helicoid (a spiral ramp) given parametrically by
-$$\vec r(u,v) = u \cos(v) \: \vec i + u \sin(v) \: \vec j + v \: \vec k$$ for $0 \leq u \leq 1$ and $0 \leq v \leq 4\pi$.}{Notice that we will be integrating over a rectangle in the $uv$-plane. We can immediately calculate $\vec r_u$ and $\vec r_v$ as
+\example{ex_surface_int05}{}{Determine the surface area of the helicoid (a spiral ramp shown in Figure~\ref{fig:helicoid}) given parametrically by
+$$\vec r(u,v) = u \cos(v) \: \vec i + u \sin(v) \: \vec j + v \: \vec k$$ for $0 \leq u \leq 1$ and $0 \leq v \leq 4\pi$.}{
+\mfigure[scale=0.62]{.35}{Helicoid}{fig:helicoid}{figures/helicoid.jpg}
+Notice that we will be integrating over a rectangle in the $uv$-plane. We can immediately calculate $\vec r_u$ and $\vec r_v$ as
 $$\vec r_u = \cos(v) \: \vec i + \sin(v) \: \vec j \: \text{ and } \vec r_v = -u \sin(v) \: \vec i + u \cos(v) \: \vec j + \vec k$$
 and so
 $$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ \cos v & \sin v & 0 \\ -u \sin(v) & u \cos(v) & 1 \end{array} \right| = \sin(v) \: \vec i - \cos(v) \: \vec j + u \: \vec k.$$
 Therefore the norm of this cross product is
-$$\left| \vec r_u \times \vec r_v \right| = \sqrt{\sin^2 v + \cos^2 v + u^2} = \sqrt{u^2 + 1}.$$
+$$\left|\left| \vec r_u \times \vec r_v \right|\right| = \sqrt{\sin^2 v + \cos^2 v + u^2} = \sqrt{u^2 + 1}.$$
 Integrating over the rectangle in the $uv$-plane gives us the surface area
-$$S = \int_0^{4\pi} \int_0^1 \sqrt{1+u^2} \: du \: dv = 4\pi \left( \dfrac{1}{2}\left( u \sqrt{1+u^2} + \ln|\sqrt{1+u^2} + u| \right)  \right]_0^1$$
+$$S = \int_0^{4\pi} \int_0^1 \sqrt{1+u^2} \: du \: dv = 4\pi \left(\left( \dfrac{1}{2}\left( u \sqrt{1+u^2} + \ln|\sqrt{1+u^2} + u| \right)  \right)\right|_0^1$$
 which evaluates to $2\pi \left( \sqrt{2} + \ln(1 + \sqrt{2}) \right)$ square units.
 }\\
 
@@ -80,7 +82,7 @@ Given a parametrized surface $T$ over a region $R$ in the $uv$-plane, we have co
 \definition{def:surface_integral}{Surface Integral}{Let $T$ be a surface defined by
 $$\vec r(u,v) = x(u,v) \: \vec i + y(u,v) \: \vec j + z(u,v) \: \vec k$$
 for $(u,v)$ in a region $R$ of the $uv$-plane.  The \textbf{surface integral} of a function $f(x,y,z)$ over $T$ is 
-$$\iint_T f(x,y,z) \: dS = \iint_R f(x(u,v), y(u,v), z(u,v)) \: \left| \vec r_u \times \vec r_v \right| \: du \: dv.$$
+$$\iint_T f(x,y,z) \: dS = \iint_R f(x(u,v), y(u,v), z(u,v)) \: \left|\left| \vec r_u \times \vec r_v \right|\right| \: du \: dv.$$
 }\\
 
 \example{ex_surface_int06}{}{Compute the surface integral of $f(x,y,z) = xyz$ over that part of the cylinder $x^2 + y^2 = 1$ above the first quadrant in the $xy$-plane and between $z = 0$ and $z = 2$.}{We first need to parametrize the cylinder as we did earlier, to obtain
@@ -88,11 +90,11 @@ $$\vec r(u,v) = \cos(u) \: \vec i + \sin(u) \: \vec j + v \: \vec k$$
 for $0 \leq u \leq \frac{\pi}{2}$ and $0 \leq v \leq 2$. Next, we compute $dS$ as before, using
 $$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ -\sin(u) & \cos(u) & 0 \\ 0 & 0 & 1 \end{array} \right| = \cos(u) \: \vec i + \sin(u) \: \vec j$$
 This gives
-$$\left| \vec r_u \times \vec r_v \right| = \sqrt{\sin^2(u) + \cos^2(u) +0} = \sqrt{1} = 1$$
+$$\left|\left| \vec r_u \times \vec r_v \right|\right| = \sqrt{\sin^2(u) + \cos^2(u) +0} = \sqrt{1} = 1$$
 for our surface. Now to integrate $f(x,y,z)$ over $T$, we change $f$ into a function of $u$ and $v$ by writing
 $$f(x,y,z) = xyz = \cos(u)  \: \sin(u) \: v$$
 as in our parametrization.  Therefore the surface integral equals
-$$\iint_T f(x,y,z) \: dS = \int_0^{2} \int_{0}^{\pi/2} \cos(u) \: \sin(u) \: v \: du \: dv = \left( \dfrac{1}{2}v^2 \right]_0^2 \left( \dfrac{1}{2}\sin^2(u) \right]_0^{\pi/2} = 1.$$
+$$\iint_T f(x,y,z) \: dS = \int_0^{2} \int_{0}^{\pi/2} \cos(u) \: \sin(u) \: v \: du \: dv = \left( \left.\dfrac{1}{2}v^2 \right|_0^2\right) \left(\left. \dfrac{1}{2}\sin^2(u) \right|_0^{\pi/2}\right) = 1.$$
 }\\
 
 A key example of an application of a surface integral is in computing the flow or \emph{flux} of a vector field across a given surface, which we discuss next.  As before, we will first address the case when the surface can be written in the form $z = f(x,y)$.\\
@@ -104,8 +106,8 @@ where $\vec n$ is the unit normal vector to the surface.
 
 Recall that a vector $\vec N$ normal to the surface will be
 $$\vec N = -f_x(x,y) \vec i - f_y(x,y) \vec j + \vec k$$
-and so the unit normal is found by dividing this by its norm
-$$\vec n = \dfrac{\vec N}{|\vec N|} = \dfrac{\vec N}{\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}}.$$
+and so the unit normal vector is found by dividing this by its norm
+$$\vec n = \dfrac{\vec N}{||\vec N||} = \dfrac{\vec N}{\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}}.$$
 Notice that the expression representing $| \vec N |$ is exactly the same as in $dS$, so these will cancel to obtain the right-most definition above. That is,
 \begin{eqnarray*}
 \vec F \cdot \vec n \: dS & = & \dfrac{\vec F \cdot \vec N}{\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}} \sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2} \: dx \: dy \\
@@ -121,9 +123,9 @@ $$\iint_T \vec F \cdot \vec n \: dS = \iint_R -\dfrac{x^2}{\sqrt{x^2 + y^2}} - \
 since $P = z = \sqrt{x^2 + y^2}$.  Notice that the integrand simplifies to zero, and so the flux across $T$ is equal to zero.  This makes sense since the vector field $\vec F$ goes straight out from the origin, which is along the conical surface, not across it.  That is, there is no flow across $T$ because $\vec F \cdot \vec n = 0$. 
 }\\
 
-Next we address the case when the surface $T$ is given parametrically by a function $\vec r(u,v)$ of two parameters $u$ and $v$ from a region $R$ in the $uv$-plane. For surfaces that fold and twist, the formulas can look more complicated, but often the calculations are simpler. Recall that a small parallelogram piece of the surface $T$ will have area $\left| \vec r_u \times \vec r_v \right| \: du \: dv$.  The vectors $\vec r_u$ and $\vec r_v$ are tangent to the surface along the sides.\\
+Next we address the case when the surface $T$ is given parametrically by a function $\vec r(u,v)$ of two parameters $u$ and $v$ from a region $R$ in the $uv$-plane. For surfaces that fold and twist, the formulas can look more complicated, but often the calculations are simpler. Recall that a small parallelogram piece of the surface $T$ will have area $\left|\left| \vec r_u \times \vec r_v \right|\right| \: du \: dv$.  The vectors $\vec r_u$ and $\vec r_v$ are tangent to the surface along the sides.\\
 
-We now put the cross product to another use, because $\vec F \cdot \vec n \: dS$ involves not only area but \emph{direction} as well. We need the unit vector $\vec n$ to know how much flow goes through, since $\vec r_u \times \vec r_v$ is perpendicular to the surface.  Also since $\vec n = \frac{\vec N}{| \vec N |}$ we get $$dS = | \vec N | \: du \: dv,$$ as the square root cancels out in $\vec n \: dS$.  This leave the following formula for the flux of a vector field across the surface $T$.\\
+We now put the cross product to another use, because $\vec F \cdot \vec n \: dS$ involves not only area but \emph{direction} as well. We need the unit vector $\vec n$ to know how much flow goes through, since $\vec r_u \times \vec r_v$ is perpendicular to the surface.  Also since $\vec n = \frac{\vec N}{|| \vec N ||}$ we get $$dS = || \vec N || \: du \: dv,$$ as the square root cancels out in $\vec n \: dS$.  This leave the following formula for the flux of a vector field across the surface $T$.\\
 
 \definition{defn_flux_2}{Flux}{Let $\vec r(u,v)$ define a surface $T$ for $(u,v)$ in a region $R$ in the $uv$-plane, and let $$\vec F(x,y,z) = M(x,y,z) \vec i + N(x,y,z) \vec j + P(x,y,z) \vec k$$ be a vector field. The \textbf{flux} of $\vec F$ across $T$ is  
 $$\iint_T \vec F \cdot \vec n \: dS = \iint_R \vec F \cdot \left( \vec r_u \times \vec r_v \right) \: du \: dv$$
@@ -140,7 +142,7 @@ and so
 Taking the dot product with $\vec F = \vec k$ we get
 $$\vec F \cdot \vec N = 9 \cos(u) \sin(u).$$
 Lastly, we integrate on $0 \leq u \leq \frac{\pi}{2}$ and $0 \leq v \leq 2\pi$ to obtain a flux of
-$$\int_0^{2\pi} \int_0^{\pi/2} 9 \cos(u) \sin(u) \: du \: dv = 18 \pi \left( \dfrac{1}{2} \sin^2(u) \right]_0^{\pi/2} = 9 \pi$$
+$$\int_0^{2\pi} \int_0^{\pi/2} 9 \cos(u) \sin(u) \: du \: dv = 18 \pi \left.\left( \dfrac{1}{2} \sin^2(u) \right)\right|_0^{\pi/2} = 9 \pi$$
 across the hemisphere.
 }\\
  
