--- a/text/title_pageIII.tex
+++ b/text/title_pageIII.tex
@@ -49,13 +49,12 @@ Jennifer Bowen, Ph.D.
 \parbox{200pt}{\textit{Dalton State Contributors}}\hskip 2cm \phantom{.}
 %\textit{Editor}\hskip 7cm\phantom{.}
 
+\large\vskip 4pt
+
+Mike Hilgemann, Ph.D.\qquad Jason Schmurr, Ph.D.\vskip 4 pt
+
+Tom Gonzalez, Ph.D.\phantom{D.}\qquad Mike Joseph, Ph.D.}
 \normalsize
-
-Mike Hilgemann \vskip 5pt
-
-Jason Schmurr \vskip 5pt
-
-Tom Gonzalez}
 \end{flushright}
 \end{minipage}
 
