Typo in 6.2 to be fixed next time books are compiled.

--- a/text/06_Trigonometric_Integrals.tex
+++ b/text/06_Trigonometric_Integrals.tex
@@ -196,7 +196,7 @@ where $u = \sec x$ and $du = \sec x\tan x\ dx$.
 \item If $n$ is odd and $m$ is even, then $m=2k$ for some integer $k$. Convert $\tan^mx $ to $(\sec^2x-1)^k$. Expand the new integrand and use Integration By Parts, with $dv = \sec^2x\ dx$.
 
 \item		If $m\geq 2$ and $n=0$, rewrite $\tan^mx$ as
-$$\tan^mx = \tan^{m-2}x\tan^2x = \tan^{m-2}x(\sec^2x-1) = \tan^{m-2}\sec^2x-\tan^{m-2}x.$$
+$$\tan^mx = \tan^{m-2}x\tan^2x = \tan^{m-2}x(\sec^2x-1) = \tan^{m-2}x \sec^2x-\tan^{m-2}x.$$
 So
 $$\int\tan^mx\ dx = \underbrace{\int\tan^{m-2}\sec^2x\ dx}_{\text{\small apply rule \#1}}\quad - \underbrace{\int\tan^{m-2}x\ dx}_{\text{\small apply rule \#4 again}}.$$
 
