--- a/exercises/06_09_ex_28.tex
+++ b/exercises/06_09_ex_28.tex
@@ -1,4 +1,4 @@
-{$\ds \int \left(5x^2+1\right)\erf x \ dx$}
+{$\ds \int x e^{-x^2+4x} \ dx$}
 {$e^4 \sqrt{\pi} \erf(x-2) - \frac{1}{2} e^{-x^2+4x} +C$
 }
 
