--- a/text/07_Arc_Length.tex
+++ b/text/07_Arc_Length.tex
@@ -183,7 +183,7 @@ SA  &=	2\pi\int_0^\pi \sin x\sqrt{1+\cos^2x}\ dx \\
 \end{align*}
 The integration step above is nontrivial, utilizing an integration method called Trigonometric Substitution. 
 
-It is interesting to see that the surface area of a solid, whose shape is defined by a trigonometric function, involves both a square root and an inverse hyperbolic trigonometric function.
+It is interesting to see that the surface area of a solid, whose shape is defined by a trigonometric function, involves both a square root and a logarithm.
 }\\
 
 \example{ex_sa2}{Finding surface area of a solid of revolution}{
