--- a/exercises/08_05_ex_14.tex
+++ b/exercises/08_05_ex_14.tex
@@ -1,4 +1,4 @@
-{$\ds \sum_{n=2}^\infty \frac{\sin\big((n+1/2)\pi\big)}{n\ln n}$
+{$\ds \sum_{n=2}^\infty \frac{\sin\big((2n+1/2)\pi\big)}{n\ln n}$
 }
 {\begin{enumerate}
 	\item converges
