typo fix in 6.2

--- a/text/06_Trigonometric_Integrals.tex
+++ b/text/06_Trigonometric_Integrals.tex
@@ -198,7 +198,7 @@ where $u = \sec x$ and $du = \sec x\tan x\ dx$.
 \item		If $m\geq 2$ and $n=0$, rewrite $\tan^mx$ as
 $$\tan^mx = \tan^{m-2}x\tan^2x = \tan^{m-2}x(\sec^2x-1) = \tan^{m-2}x \sec^2x-\tan^{m-2}x.$$
 So
-$$\int\tan^mx\ dx = \underbrace{\int\tan^{m-2}\sec^2x\ dx}_{\text{\small apply rule \#1}}\quad - \underbrace{\int\tan^{m-2}x\ dx}_{\text{\small apply rule \#4 again}}.$$
+$$\int\tan^mx\ dx = \underbrace{\int\tan^{m-2}x\sec^2x\ dx}_{\text{\small apply rule \#1}}\quad - \underbrace{\int\tan^{m-2}x\ dx}_{\text{\small apply rule \#4 again}}.$$
 
 \end{enumerate}
 }
