--- a/exercises/01_01_ex_18.tex
+++ b/exercises/01_01_ex_18.tex
@@ -6,5 +6,5 @@ $h$ & $\frac{f(a+h)-f(a)}{h}$\\ \hline
  $0.01$ & $0.00499996$ \\
  $0.1$ & $0.0499583$
 \end{tabular}
-The limit is approx. $0.005$.
+The limit is approx. 0.
 }
